# voice-assistat

./: .gitignore  README.md  Team-Agreement.md  pyproject.toml  requirements.md  requirements.txt  user_story.md
.github/workflows/: python-app.yml
dario/: main.py
tests/: test_dario.py
