[tool.poetry]
name = "dario"
version = "0.1.0"
description = ""
authors = ["ferasezzaldeen <ferasezaldeen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SpeechRecognition = "^3.8.1"
audiomath = "^1.15.4"
pyttsx3 = "^2.90"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
